<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:android_custom="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
        android:id="@+id/tips_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        layout="@layout/tips_layout"/>


    <RelativeLayout
        android:id="@+id/game_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/mario_90dp"
        android:layout_marginRight="@dimen/mario_70dp">

        <LinearLayout
            android:id="@+id/game_detail_info_layout"
            android:layout_width="@dimen/mario_566dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/mario_29dp"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/mario_208dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/game_detail_icon_container"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true">

                    <com.lemi.mario.image.view.AsyncImageView
                        android:id="@+id/game_detail_icon"
                        android:layout_width="@dimen/mario_190dp"
                        android:layout_height="@dimen/mario_190dp"
                        android:layout_centerInParent="true"
                        android:scaleType="fitXY"/>

                    <com.lemi.controller.lemigameassistance.view.DownloadUnzipRoundBar
                        android:id="@+id/game_detail_round_progressbar"
                        android:visibility="gone"
                        android:layout_centerInParent="true"
                        android:layout_width="@dimen/mario_128dp"
                        android:layout_height="@dimen/mario_128dp"
                        android:background="@drawable/round_progress_background"
                        android_custom:roundColor="@color/download_unzip_round_background_selector"
                        android_custom:roundProgressColor="@color/download_unzip_round_progress_color_selector"
                        android_custom:textColor="@color/download_unzip_text_color_selector"
                        android_custom:roundWidth="@dimen/mario_14dp"
                        android_custom:hasSpecialBackground="true"
                        android_custom:textSize="@dimen/mario_23sp"/>

                </RelativeLayout>


                <com.lemi.controller.lemigameassistance.view.AlwaysMarqueeTextView
                    android:id="@+id/game_detail_name"
                    android:layout_toRightOf="@id/game_detail_icon_container"
                    android:layout_width="@dimen/mario_360dp"
                    android:layout_height="@dimen/mario_47dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/mario_23dp"
                    android:gravity="top"
                    android:text="@string/game_name"
                    android:textColor="@color/game_detail_normal"
                    android:textSize="@dimen/mario_36sp"/>

                <TextView
                    android:id="@+id/game_detail_size"
                    android:layout_toRightOf="@id/game_detail_icon_container"
                    android:layout_below="@id/game_detail_name"
                    android:layout_width="@dimen/mario_180dp"
                    android:layout_height="@dimen/mario_28dp"
                    android:layout_marginLeft="@dimen/mario_23dp"
                    android:text="@string/game_size"
                    android:textColor="@color/game_detail_info"
                    android:textSize="@dimen/mario_23sp"/>


                <TextView
                    android:id="@+id/game_detail_download_count"
                    android:layout_toRightOf="@id/game_detail_size"
                    android:layout_below="@id/game_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mario_28dp"
                    android:text="@string/game_size"
                    android:textColor="@color/game_detail_info"
                    android:textSize="@dimen/mario_23sp"/>

                <TextView
                    android:id="@+id/game_detail_play_mode"
                    android:layout_toRightOf="@id/game_detail_icon_container"
                    android:layout_below="@id/game_detail_size"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mario_28dp"
                    android:layout_marginLeft="@dimen/mario_23dp"
                    android:text="@string/game_palypode"
                    android:textColor="@color/game_detail_info"
                    android:textSize="@dimen/mario_23sp"/>

                <TextView
                    android:id="@+id/game_detail_operation_mode"
                    android:layout_toRightOf="@id/game_detail_icon_container"
                    android:layout_below="@id/game_detail_play_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/mario_28dp"
                    android:layout_marginLeft="@dimen/mario_23dp"
                    android:text="@string/game_operation"
                    android:textColor="@color/game_detail_info"
                    android:textSize="@dimen/mario_23sp"/>


                <ImageView
                    android:id="@+id/game_detail_operation_joystick"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/mario_28dp"
                    android:layout_below="@id/game_detail_play_mode"
                    android:layout_toRightOf="@id/game_detail_operation_mode"
                    android:layout_marginRight="@dimen/mario_16dp"
                    android:src="@drawable/control_gamepad"
                    android:textSize="@dimen/mario_23sp"/>

                <ImageView
                    android:id="@+id/game_detail_operation_control_panel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/mario_28dp"
                    android:layout_below="@id/game_detail_play_mode"
                    android:layout_marginRight="@dimen/mario_16dp"
                    android:layout_toRightOf="@id/game_detail_operation_joystick"
                    android:src="@drawable/control_panel"
                    android:textSize="@dimen/mario_23sp"/>

                <ImageView
                    android:id="@+id/game_detail_operation_mouse"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/mario_28dp"
                    android:layout_below="@id/game_detail_play_mode"
                    android:layout_toRightOf="@id/game_detail_operation_control_panel"
                    android:src="@drawable/control_mouse"
                    android:textSize="@dimen/mario_23sp"/>


                <com.lemi.controller.lemigameassistance.view.NetAppButton
                    android:id="@+id/game_detail_download_button"
                    android:layout_toRightOf="@id/game_detail_icon_container"
                    android:layout_below="@id/game_detail_operation_mode"
                    android:layout_width="@dimen/mario_150dp"
                    android:layout_height="@dimen/mario_71dp"
                    android:layout_marginLeft="@dimen/mario_10dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/mario_24sp"
                    android:background="@drawable/button_selector"
                    android:nextFocusDown="@id/game_detail_download_button"
                    android:nextFocusUp="@id/game_detail_download_button"
                    android:scaleType="fitXY"/>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/mario_4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/game_detail_notice_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/game_detail_deb_tittle"
                    android:textSize="@dimen/mario_24sp"/>

                <TextView
                    android:id="@+id/game_detail_notice_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mario_5dp"
                    android:textColor="@color/game_detail_normal"
                    android:textSize="@dimen/mario_24sp"/>

                <TextView
                    android:id="@+id/game_detail_description_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/game_detail_deb_tittle"
                    android:textSize="@dimen/mario_24sp"/>

                <TextView
                    android:id="@+id/game_detail_description_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mario_5dp"
                    android:textColor="@color/game_detail_normal"
                    android:textSize="@dimen/mario_24sp"/>
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/mario_7dp"
            android:layout_marginLeft="@dimen/mario_50dp"
            android:layout_marginTop="@dimen/mario_9dp"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/game_detail_info_layout"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/game_detail_sreen_shot_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>